[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-openenv"
version = "1.0.0"
description = "An environment for automated code review"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic",
    "fastapi",
    "uvicorn",
    "requests"
]